CI: Re-enable maintainer check
At this point we have all of the defconfigs maintained again, so
re-enable the check to prevent further regressions.

Signed-off-by: Tom Rini <trini@konsulko.com>

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -91,7 +91,7 @@ stages:
       options: $(container_option)
     steps:
       - script: |
-          ./tools/buildman/buildman --maintainer-check || exit 0
+          ./tools/buildman/buildman --maintainer-check
 
   - job: tools_only
     displayName: 'Ensure host tools and env tools build'
